<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pointstitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#32CD32" />

        <TextView
            android:id="@+id/tv_offers_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#32CD32" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_show_offers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_show_rewardoffers" />

    <Button
        android:id="@+id/btn_award"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/award" />

    <Button
        android:id="@+id/btn_spend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/spendpoints" />

    <Button
        android:id="@+id/btn_refresh"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh" />

</LinearLayout>